--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -5,6 +5,13 @@ output:
     keep_md: true
 ---
 
+```{r setup, include=FALSE}
+
+knitr::opts_chunk$set(echo = TRUE)
+
+knitr::opts_chunk$set( fig.path = "figs/fig-")
+
+```
 
 ## Loading and preprocessing the data
 
